syntax = "proto3";

package SpaceX.API.Device;

option java_package = "com.spacex.api.device";
option java_outer_classname = "DeviceProto";
option java_multiple_files = true;

import "spacex/api/common/status/status.proto";
import "spacex/api/device/command.proto";
import "spacex/api/device/common.proto";
import "spacex/api/device/dish.proto";
import "spacex/api/device/transceiver.proto";
import "spacex/api/device/wifi.proto";
import "google/protobuf/timestamp.proto";

service Device {
  rpc Stream (stream .SpaceX.API.Device.ToDevice) returns (stream .SpaceX.API.Device.FromDevice) {}
  rpc Handle (.SpaceX.API.Device.Request) returns (.SpaceX.API.Device.Response) {}
}

message ToDevice {
  oneof message {
    .SpaceX.API.Device.Request request = 1;
    .SpaceX.API.Device.HealthCheck health_check = 2;
  }
}

message FromDevice {
  oneof message {
    .SpaceX.API.Device.Response response = 1;
    .SpaceX.API.Device.Event event = 2;
    .SpaceX.API.Device.HealthCheck health_check = 3;
  }
}

message SensitiveCommand {
  .google.protobuf.Timestamp timestamp = 1;
  string target_id = 2;
  oneof request {
    .SpaceX.API.Device.GetLocationRequest get_location = 3;
  }
}

message HealthCheck {
}

message Request {
  reserved "start_dish_self_test";
  reserved 1018;
  reserved 1025;
  reserved 1026;
  reserved 2012;
  reserved 2016;
  reserved 3011;
  reserved 3014;
  reserved 3202;
  uint64 id = 1;
  uint64 epoch_id = 14;
  string target_id = 13;
  oneof request {
    .SpaceX.API.Device.SignedData signed_request = 15;
    .SpaceX.API.Device.GetNextIdRequest get_next_id = 1006;
    .SpaceX.API.Device.SignedData sensitive_request = 1078;
    .SpaceX.API.Device.AuthenticateRequest authenticate = 1005;
    .SpaceX.API.Device.EnableDebugTelemRequest enable_debug_telem = 1034;
    .SpaceX.API.Device.FactoryResetRequest factory_reset = 1011;
    .SpaceX.API.Device.GetDeviceInfoRequest get_device_info = 1008;
    .SpaceX.API.Device.GetHistoryRequest get_history = 1007;
    .SpaceX.API.Device.GetLogRequest get_log = 1012;
    .SpaceX.API.Device.GetNetworkInterfacesRequest get_network_interfaces = 1015;
    .SpaceX.API.Device.GetPingRequest get_ping = 1009;
    .SpaceX.API.Device.PingHostRequest ping_host = 1016;
    .SpaceX.API.Device.GetStatusRequest get_status = 1004;
    .SpaceX.API.Device.RebootRequest reboot = 1001;
    .SpaceX.API.Device.SetSkuRequest set_sku = 1013;
    .SpaceX.API.Device.SetTrustedKeysRequest set_trusted_keys = 1010;
    .SpaceX.API.Device.SpeedTestRequest speed_test = 1003;
    .SpaceX.API.Device.UpdateRequest update = 1014;
    .SpaceX.API.Device.GetLocationRequest get_location = 1017;
    .SpaceX.API.Device.GetHeapDumpRequest get_heap_dump = 1019;
    .SpaceX.API.Device.RestartControlRequest restart_control = 1020;
    .SpaceX.API.Device.FuseRequest fuse = 1021;
    .SpaceX.API.Device.GetPersistentStatsRequest get_persistent_stats = 1022;
    .SpaceX.API.Device.GetConnectionsRequest get_connections = 1023;
    .SpaceX.API.Device.StartSpeedtestRequest start_speedtest = 1027;
    .SpaceX.API.Device.GetSpeedtestStatusRequest get_speedtest_status = 1028;
    .SpaceX.API.Device.ReportClientSpeedtestRequest report_client_speedtest = 1029;
    .SpaceX.API.Device.InitiateRemoteSshRequest initiate_remote_ssh = 1030;
    .SpaceX.API.Device.SelfTestRequest self_test = 1031;
    .SpaceX.API.Device.SetTestModeRequest set_test_mode = 1032;
    .SpaceX.API.Device.SoftwareUpdateRequest software_update = 1033;
    .SpaceX.API.Device.IQCaptureRequest iq_capture = 1035;
    .SpaceX.API.Device.GetRadioStatsRequest get_radio_stats = 1036;
    .SpaceX.API.Device.GetTimeRequest time = 1037;
    .SpaceX.API.Device.RunIperfServerRequest run_iperf_server = 1038;
    .SpaceX.API.Device.TcpConnectivityTestRequest tcp_connectivity_test = 1039;
    .SpaceX.API.Device.UdpConnectivityTestRequest udp_connectivity_test = 1040;
    .SpaceX.API.Device.GetGoroutineStackTracesRequest get_goroutine_stack_traces = 1041;
    .SpaceX.API.Device.DishStowRequest dish_stow = 2002;
    .SpaceX.API.Device.DishGetContextRequest dish_get_context = 2003;
    .SpaceX.API.Device.DishGetObstructionMapRequest dish_get_obstruction_map = 2008;
    .SpaceX.API.Device.DishSetEmcRequest dish_set_emc = 2007;
    .SpaceX.API.Device.DishGetEmcRequest dish_get_emc = 2009;
    .SpaceX.API.Device.DishSetConfigRequest dish_set_config = 2010;
    .SpaceX.API.Device.DishGetConfigRequest dish_get_config = 2011;
    .SpaceX.API.Device.DishPowerSaveRequest dish_power_save = 2013;
    .SpaceX.API.Device.DishInhibitGpsRequest dish_inhibit_gps = 2014;
    .SpaceX.API.Device.DishGetDataRequest dish_get_data = 2015;
    .SpaceX.API.Device.DishClearObstructionMapRequest dish_clear_obstruction_map = 2017;
    .SpaceX.API.Device.DishSetMaxPowerTestModeRequest dish_set_max_power_test_mode = 2018;
    .SpaceX.API.Device.DishActivateRssiScanRequest dish_activate_rssi_scan = 2019;
    .SpaceX.API.Device.DishGetRssiScanResultRequest dish_get_rssi_scan_result = 2020;
    .SpaceX.API.Device.DishFactoryResetRequest dish_factory_reset = 2021;
    .SpaceX.API.Device.ResetButtonRequest reset_button = 2022;
    .SpaceX.API.Device.WifiGetClientsRequest wifi_get_clients = 3002;
    .SpaceX.API.Device.WifiGetPingMetricsRequest wifi_get_ping_metrics = 3007;
    .SpaceX.API.Device.WifiSetConfigRequest wifi_set_config = 3001;
    .SpaceX.API.Device.WifiGetConfigRequest wifi_get_config = 3009;
    .SpaceX.API.Device.WifiSetupRequest wifi_setup = 3003;
    .SpaceX.API.Device.WifiSetMeshDeviceTrustRequest wifi_set_mesh_device_trust = 3012;
    .SpaceX.API.Device.WifiSetMeshConfigRequest wifi_set_mesh_config = 3013;
    .SpaceX.API.Device.WifiGetClientHistoryRequest wifi_get_client_history = 3015;
    .SpaceX.API.Device.WifiSetClientGivenNameRequest wifi_set_client_given_name = 3017;
    .SpaceX.API.Device.WifiSetAviationConformedRequest wifi_set_aviation_conformed = 3016;
    .SpaceX.API.Device.WifiSelfTestRequest wifi_self_test = 3018;
    .SpaceX.API.Device.WifiRunSelfTestRequest wifi_run_self_test = 3028;
    .SpaceX.API.Device.WifiCalibrationModeRequest wifi_calibration_mode = 3019;
    .SpaceX.API.Device.WifiGuestInfoRequest wifi_guest_info = 3020;
    .SpaceX.API.Device.WifiRfTestRequest wifi_rf_test = 3021;
    .SpaceX.API.Device.WifiGetFirewallRequest wifi_get_firewall = 3024;
    .SpaceX.API.Device.WifiTogglePoeNegotiationRequest wifi_toggle_poe_negotiation = 3025;
    .SpaceX.API.Device.WifiFactoryTestCommandRequest wifi_factory_test_command = 3026;
    .SpaceX.API.Device.WifiStartLocalTelemProxyRequest wifi_start_local_telem_proxy = 3027;
    .SpaceX.API.Device.WifiBackhaulStatsRequest wifi_backhaul_stats = 3029;
    .SpaceX.API.Device.WifiToggleUmbilicalModeRequest wifi_toggle_umbilical_mode = 3030;
    .SpaceX.API.Device.WifiClientSandboxRequest wifi_client_sandbox = 3031;
    .SpaceX.API.Device.TransceiverIFLoopbackTestRequest transceiver_if_loopback_test = 4001;
    .SpaceX.API.Device.TransceiverGetStatusRequest transceiver_get_status = 4003;
    .SpaceX.API.Device.TransceiverGetTelemetryRequest transceiver_get_telemetry = 4004;
    .SpaceX.API.Device.GetDiagnosticsRequest get_diagnostics = 6000;
  }
}

message Response {
  reserved "start_dish_self_test";
  reserved 1018;
  reserved 1026;
  reserved 2014;
  reserved 2012;
  reserved 2025;
  reserved 3008;
  reserved 3011;
  reserved 3014;
  reserved 3203;
  uint64 id = 1;
  .SpaceX.API.Status.Status status = 2;
  uint64 api_version = 3;
  oneof response {
    .SpaceX.API.Device.GetNextIdResponse get_next_id = 1006;
    .SpaceX.API.Device.EnableDebugTelemResponse enable_debug_telem = 1034;
    .SpaceX.API.Device.FactoryResetResponse factory_reset = 1011;
    .SpaceX.API.Device.GetDeviceInfoResponse get_device_info = 1004;
    .SpaceX.API.Device.GetLogResponse get_log = 1012;
    .SpaceX.API.Device.GetNetworkInterfacesResponse get_network_interfaces = 1015;
    .SpaceX.API.Device.GetPingResponse get_ping = 1009;
    .SpaceX.API.Device.PingHostResponse ping_host = 1016;
    .SpaceX.API.Device.RebootResponse reboot = 1001;
    .SpaceX.API.Device.SpeedTestResponse speed_test = 1003;
    .SpaceX.API.Device.SetSkuResponse set_sku = 1013;
    .SpaceX.API.Device.SetTrustedKeysResponse set_trusted_keys = 1010;
    .SpaceX.API.Device.UpdateResponse update = 1014;
    .SpaceX.API.Device.GetLocationResponse get_location = 1017;
    .SpaceX.API.Device.GetHeapDumpResponse get_heap_dump = 1019;
    .SpaceX.API.Device.RestartControlResponse restart_control = 1020;
    .SpaceX.API.Device.FuseResponse fuse = 1021;
    .SpaceX.API.Device.GetConnectionsResponse get_connections = 1023;
    .SpaceX.API.Device.StartSpeedtestResponse start_speedtest = 1027;
    .SpaceX.API.Device.GetSpeedtestStatusResponse get_speedtest_status = 1028;
    .SpaceX.API.Device.ReportClientSpeedtestResponse report_client_speedtest = 1029;
    .SpaceX.API.Device.InitiateRemoteSshResponse initiate_remote_ssh = 1030;
    .SpaceX.API.Device.SelfTestResponse self_test = 1031;
    .SpaceX.API.Device.SetTestModeResponse set_test_mode = 1032;
    .SpaceX.API.Device.SoftwareUpdateResponse software_update = 1033;
    .SpaceX.API.Device.GetRadioStatsResponse get_radio_stats = 1035;
    .SpaceX.API.Device.GetTimeResponse time = 1037;
    .SpaceX.API.Device.RunIperfServerResponse run_iperf_server = 1038;
    .SpaceX.API.Device.GetGoroutineStackTracesResponse get_goroutine_stack_traces = 1041;
    .SpaceX.API.Device.DishAuthenticateResponse dish_authenticate = 2005;
    .SpaceX.API.Device.DishGetContextResponse dish_get_context = 2003;
    .SpaceX.API.Device.DishGetHistoryResponse dish_get_history = 2006;
    .SpaceX.API.Device.DishGetStatusResponse dish_get_status = 2004;
    .SpaceX.API.Device.DishGetObstructionMapResponse dish_get_obstruction_map = 2008;
    .SpaceX.API.Device.DishStowResponse dish_stow = 2002;
    .SpaceX.API.Device.DishSetEmcResponse dish_set_emc = 2007;
    .SpaceX.API.Device.DishGetEmcResponse dish_get_emc = 2009;
    .SpaceX.API.Device.DishSetConfigResponse dish_set_config = 2010;
    .SpaceX.API.Device.DishGetConfigResponse dish_get_config = 2011;
    .SpaceX.API.Device.DishInhibitGpsResponse dish_inhibit_gps = 2013;
    .SpaceX.API.Device.DishClearObstructionMapResponse dish_clear_obstruction_map = 2015;
    .SpaceX.API.Device.DishSetMaxPowerTestModeResponse dish_set_max_power_test_mode = 2018;
    .SpaceX.API.Device.DishActivateRssiScanResponse dish_activate_rssi_scan = 2019;
    .SpaceX.API.Device.DishGetRssiScanResultResponse dish_get_rssi_scan_result = 2020;
    .SpaceX.API.Device.DishFactoryResetResponse dish_factory_reset = 2021;
    .SpaceX.API.Device.ResetButtonResponse reset_button = 2022;
    .SpaceX.API.Device.WifiAuthenticateResponse wifi_authenticate = 3005;
    .SpaceX.API.Device.WifiGetClientsResponse wifi_get_clients = 3002;
    .SpaceX.API.Device.WifiGetHistoryResponse wifi_get_history = 3006;
    .SpaceX.API.Device.WifiGetPingMetricsResponse wifi_get_ping_metrics = 3007;
    .SpaceX.API.Device.WifiGetStatusResponse wifi_get_status = 3004;
    .SpaceX.API.Device.WifiSetConfigResponse wifi_set_config = 3001;
    .SpaceX.API.Device.WifiGetConfigResponse wifi_get_config = 3009;
    .SpaceX.API.Device.WifiSetupResponse wifi_setup = 3003;
    .SpaceX.API.Device.WifiGetPersistentStatsResponse wifi_get_persistent_stats = 3022;
    .SpaceX.API.Device.WifiSetMeshDeviceTrustResponse wifi_set_mesh_device_trust = 3012;
    .SpaceX.API.Device.WifiSetMeshConfigResponse wifi_set_mesh_config = 3013;
    .SpaceX.API.Device.WifiGetClientHistoryResponse wifi_get_client_history = 3015;
    .SpaceX.API.Device.WifiSelfTestResponse wifi_self_test = 3016;
    .SpaceX.API.Device.WifiGuestInfoResponse wifi_guest_info = 3020;
    .SpaceX.API.Device.WifiRfTestResponse wifi_rf_test = 3021;
    .SpaceX.API.Device.WifiGetFirewallResponse wifi_get_firewall = 3024;
    .SpaceX.API.Device.WifiFactoryTestCommandResponse wifi_factory_test_command = 3025;
    .SpaceX.API.Device.WifiBackhaulStatsResponse wifi_backhaul_stats = 3026;
    .SpaceX.API.Device.WifiClientSandboxResponse wifi_client_sandbox = 3027;
    .SpaceX.API.Device.WifiUpdateResponse wifi_update = 3028;
    .SpaceX.API.Device.TransceiverIFLoopbackTestResponse transceiver_if_loopback_test = 4001;
    .SpaceX.API.Device.TransceiverGetStatusResponse transceiver_get_status = 4003;
    .SpaceX.API.Device.TransceiverGetTelemetryResponse transceiver_get_telemetry = 4004;
    .SpaceX.API.Device.WifiGetDiagnosticsResponse wifi_get_diagnostics = 6000;
    .SpaceX.API.Device.DishGetDiagnosticsResponse dish_get_diagnostics = 6001;
  }
}

message Event {
  oneof event {
    .SpaceX.API.Device.WifiNewClientConnectedEvent wifi_new_client_connected = 3001;
    .SpaceX.API.Device.WifiAccountBondingEvent wifi_account_bonding = 3002;
    .SpaceX.API.Device.WifiNewPeerEvent wifi_new_peer = 3003;
    .SpaceX.API.Device.WifiCloudStatusEvent wifi_cloud_status = 3004;
    .SpaceX.API.Device.WifiClientSandboxRequest wifi_client_sandbox = 3005;
  }
}

message WifiCloudStatusEvent {
  uint32 api_version = 4;
  bool direct_link_to_dish = 1;
  string hardware_version = 2;
  bool is_bypassed = 3;
}

message WifiClientSandboxRequest {
  repeated .SpaceX.API.Device.WifiClientSandboxStatus client_sandbox_status = 1;
  repeated .SpaceX.API.Device.WifiClientSandboxAlert alerts = 2;
  uint64 unix_timestamp_ns = 3;
}

message WifiClientSandboxResponse {
}

message WifiClientSandboxStatus {
  string client = 1;
  uint32 sandbox = 2;
  bool sandboxed = 3;
}

message EnableDebugTelemRequest {
  uint32 duration_m = 1;
}

message EnableDebugTelemResponse {
}

message FactoryResetRequest {
}

message FactoryResetResponse {
}

message GetTimeRequest {
}

message GetTimeResponse {
  int64 unix_nano = 1;
}

message FuseRequest {
  bool prevent_reboot = 1;
}

message FuseResponse {
}

message GetHistoryRequest {
}

message GetLogRequest {
}

message GetLogResponse {
  message Logs {
    string syslog = 1;
    string dmesg = 2;
    string kernel_panic = 3;
    string mtk_eth_procs = 4;
    string debug_netsys_0sec = 5;
    string debug_netsys_2sec = 6;
  }

  .SpaceX.API.Device.GetLogResponse.Logs current = 4;
  .SpaceX.API.Device.GetLogResponse.Logs saved = 5;
  string syslog = 1;
  string offline_log = 2;
  string persistent_log = 3;
}

message GetPingRequest {
}

message GetPingResponse {
  message ResultsEntry {
    string key = 1;
    .SpaceX.API.Device.PingResult value = 2;
  }

  repeated .SpaceX.API.Device.GetPingResponse.ResultsEntry results = 1;
}

message PingHostRequest {
  string address = 3;
  uint32 size = 4;
}

message PingHostResponse {
  .SpaceX.API.Device.PingResult result = 1;
}

message GetStatusRequest {
}

message RebootRequest {
}

message RebootResponse {
}

message SpeedTestStats {
  enum Target {
    UNKNOWN = 0;
    FASTCOM = 1;
    CLOUDFLARE = 2;
  }

  float latency_ms = 3;
  uint64 start_time = 4;
  int64 upload_start_time = 5;
  int64 download_start_time = 6;
  float upload_mbps = 1;
  float download_mbps = 2;
  .SpaceX.API.Device.SpeedTestStats.Target target = 7;
  uint32 tcp_streams = 8;
}

message ClientPlatform {
  enum Platform {
    UNKNOWN = 0;
    IOS = 1;
    ANDROID = 2;
    WEB = 3;
  }

  .SpaceX.API.Device.ClientPlatform.Platform platform = 1;
  float major_version = 2;
  float minor_version = 3;
}

message SpeedTestRequest {
  uint32 id = 4;
  .SpaceX.API.Device.SpeedTestStats client_speedtest = 1;
  float client_rssi = 2;
  .SpaceX.API.Device.ClientPlatform client_platform = 3;
}

message SpeedTestResponse {
  float download_bps = 1;
  float upload_bps = 2;
  float latency_s = 3;
  float download_mbps = 4;
  float upload_mbps = 5;
  float latency_ms = 6;
  .SpaceX.API.Device.SpeedTestStats router_speedtest = 15;
  float download_mbps_1_tcp_conn = 7;
  float upload_mbps_1_tcp_conn = 8;
  float download_mbps_4_tcp_conn = 9;
  float upload_mbps_4_tcp_conn = 10;
  float download_mbps_16_tcp_conn = 11;
  float upload_mbps_16_tcp_conn = 12;
  float download_mbps_64_tcp_conn = 13;
  float upload_mbps_64_tcp_conn = 14;
}

message RunIperfServerRequest {
  uint32 duration_s = 1;
}

message RunIperfServerResponse {
  uint32 port = 1;
}

message GetConnectionsRequest {
}

message GetConnectionsResponse {
  message ServiceConnection {
    string address = 1;
    int32 seconds_since_success = 2;
  }

  message ServicesEntry {
    string key = 1;
    .SpaceX.API.Device.GetConnectionsResponse.ServiceConnection value = 2;
  }

  repeated .SpaceX.API.Device.GetConnectionsResponse.ServicesEntry services = 1;
}

message GetDeviceInfoRequest {
}

message GetDeviceInfoResponse {
  .SpaceX.API.Device.DeviceInfo device_info = 1;
}

message SetTrustedKeysRequest {
  repeated .SpaceX.API.Device.PublicKey keys = 1;
}

message SetTrustedKeysResponse {
}

message SetSkuRequest {
  string sku = 1;
  string country_code = 2;
  bool apply_country_code = 4;
  bool pin_country_code = 5;
  bool custom_power_table = 6;
}

message SetSkuResponse {
}

message UpdateRequest {
}

message UpdateResponse {
}

message RestartControlRequest {
}

message RestartControlResponse {
}

message GetNetworkInterfacesRequest {
}

message GetNetworkInterfacesResponse {
  repeated .SpaceX.API.Device.NetworkInterface network_interfaces = 1006;
}

message GetRadioStatsRequest {
}

message GetRadioStatsResponse {
  repeated .SpaceX.API.Device.RadioStats radio_stats = 1;
}

message GetHeapDumpRequest {
}

message GetHeapDumpResponse {
  string heap_dump = 1;
}

message GetLocationRequest {
  .SpaceX.API.Device.PositionSource source = 1;
}

message GetLocationResponse {
  reserved "ecef";
  reserved 2;
  .SpaceX.API.Device.LLAPosition lla = 1;
  double sigma_m = 4;
  .SpaceX.API.Device.PositionSource source = 3;
}

message DishSetEmcRequest {
  reserved "amplitude_taper_override";
  reserved 23;
  double theta = 1;
  double phi = 2;
  uint32 rx_chan = 3;
  uint32 tx_chan = 4;
  uint32 modulation = 5;
  double desired_tilt_angle = 7;
  bool chan_override = 8;
  bool theta_enabled = 9;
  bool phi_enabled = 10;
  bool idle = 11;
  bool fast_switching = 12;
  bool sky_search = 13;
  bool force_pll_unlock = 14;
  bool force_eirp_failure = 15;
  bool snow_active_override = 16;
  bool manual_tilting = 18;
  bool tilt_to_stowed = 19;
  bool reboot = 20;
  bool continuous_motor_test = 21;
  double distance_override_meters = 22;
  uint32 country_code_override = 24;
  int32 tx_duty_cycle_override = 25;
  int32 rx_duty_cycle_override = 26;
  double eirp_legal_limit_dbw_override = 27;
  double eirp_adjustment_db = 28;
}

message DishSetEmcResponse {
}

message DishSetMaxPowerTestModeRequest {
  bool enabled = 1;
}

message DishSetMaxPowerTestModeResponse {
  bool enabled = 1;
}

message DishGetEmcRequest {
}

message DishGetEmcResponse {
  reserved "baseline_heating";
  reserved "additional_heating";
  reserved "total_heating";
  reserved "target_total_heating";
  reserved "eirp_scale_override";
  reserved "amplitude_taper_override";
  reserved "amplitude_taper_enabled";
  reserved "amplitude_taper_scale";
  reserved 26 to 29;
  reserved 40;
  reserved 59;
  reserved 60;
  reserved 61;
  string uuid = 2;
  uint64 timestamp = 3;
  uint32 cplane_updates = 11;
  double gps_latitude = 16;
  double gps_longitude = 17;
  double gps_pdop = 18;
  uint32 rf_mode = 19;
  double phi = 20;
  double theta = 21;
  uint32 rx_channel = 22;
  uint32 tx_channel = 23;
  float t_dbf_max = 24;
  double t_center = 25;
  bool auto_power_snow_melt_enabled = 30;
  double voltage = 32;
  uint32 rx_beam_state = 33;
  uint32 tx_beam_state = 34;
  uint32 half_duplex_state = 35;
  bool manual_tilt_enabled = 36;
  double tilt_angle = 37;
  uint32 pll_tx_lock_detected = 38;
  bool eirp_exceeded_threshold = 39;
  bool idle_override_enabled = 41;
  bool theta_override_enabled = 42;
  double theta_override_value = 43;
  bool phi_override_enabled = 44;
  double phi_override_value = 45;
  uint32 rx_chan_override_value = 46;
  uint32 tx_chan_override_value = 47;
  bool sky_search_override_enabled = 48;
  bool fast_switching_enabled = 49;
  uint32 modulation_override_value = 50;
  bool force_eirp_failure = 51;
  bool force_pll_unlock = 52;
  uint32 ut_ine_success = 53;
  bool rf_ready = 54;
  bool tilt_to_stowed = 55;
  bool reboot = 56;
  bool continuous_motor_test = 57;
  double distance_override_meters = 58;
  uint32 country_code_override = 62;
  double max_pointing_distance = 63;
  double distance_scaling_factor = 64;
  int32 tx_duty_cycle_override = 65;
  int32 rx_duty_cycle_override = 66;
  float tx_time_ms = 67;
  float rx_time_ms = 68;
  double eirp_legal_limit_dbw = 69;
  double eirp_legal_limit_dbw_override = 70;
  double eirp_adjustment_db = 71;
  double eirp_predicted_dbw = 72;
}

message GetPersistentStatsRequest {
}

message StartSpeedtestRequest {
}

message StartSpeedtestResponse {
}

message SpeedtestStatus {
  message Direction {
    repeated float throughputs_mbps = 1;
    .SpaceX.API.Device.SpeedtestError err = 2;
  }

  bool running = 1;
  uint32 id = 2;
  .SpaceX.API.Device.SpeedtestStatus.Direction up = 1000;
  .SpaceX.API.Device.SpeedtestStatus.Direction down = 1001;
}

message GetSpeedtestStatusRequest {
}

message GetSpeedtestStatusResponse {
  .SpaceX.API.Device.SpeedtestStatus status = 1;
}

message ReportClientSpeedtestRequest {
  uint32 id = 1;
  .SpaceX.API.Device.SpeedTestStats client_speedtest = 2;
  .SpaceX.API.Device.SpeedTestStats wifi_speedtest = 5;
  float client_rssi = 3;
  .SpaceX.API.Device.ClientPlatform client_platform = 4;
  string app_version = 6;
  uint32 app_build = 7;
}

message ReportClientSpeedtestResponse {
}

message DishPowerSaveRequest {
  uint32 power_save_start_minutes = 1;
  uint32 power_save_duration_minutes = 2;
  bool enable_power_save = 3;
}

message IQCaptureRequest {
}

message GetDiagnosticsRequest {
}

message WifiGetDiagnosticsResponse {
  message Network {
    string domain = 1;
    string ipv4 = 2;
    repeated string ipv6 = 3;
    uint32 clients_ethernet = 10;
    uint32 clients_2ghz = 11;
    uint32 clients_5ghz = 12;
  }

  string id = 1;
  string hardware_version = 2;
  string software_version = 3;
  repeated .SpaceX.API.Device.WifiGetDiagnosticsResponse.Network networks = 4;
}

message DishGetDiagnosticsResponse {
  message Alerts {
    bool dish_is_heating = 1;
    bool dish_thermal_throttle = 2;
    bool dish_thermal_shutdown = 3;
    bool power_supply_thermal_throttle = 4;
    bool motors_stuck = 5;
    bool mast_not_near_vertical = 6;
    bool slow_ethernet_speeds = 7;
    bool software_install_pending = 8;
    bool moving_too_fast_for_policy = 9;
    bool obstructed = 10;
  }

  message Location {
    bool enabled = 1;
    double latitude = 2;
    double longitude = 3;
    double altitude_meters = 4;
    bool uncertainty_meters_valid = 5;
    double uncertainty_meters = 6;
    double gps_time_s = 7;
  }

  message AlignmentStats {
    float boresight_azimuth_deg = 1;
    float boresight_elevation_deg = 2;
    float desired_boresight_azimuth_deg = 3;
    float desired_boresight_elevation_deg = 4;
  }

  enum TestResult {
    NO_RESULT = 0;
    PASSED = 1;
    FAILED = 2;
  }

  enum TestResultCode {
    GENERAL = 0;
    BOOT_UP = 1;
    CPU_VOLTAGE = 2;
    DBF_AAP_CS = 3;
    DBF_NUM_FEMS = 4;
    DBF_READ_ERRORS = 5;
    DBF_T_DIE_0 = 6;
    DBF_T_DIE_1 = 7;
    DBF_T_DIE_0_VALID = 8;
    DBF_T_DIE_1_VALID = 9;
    ETH_PRIME = 10;
    EIRP = 11;
    FEM_CUT = 12;
    FUSE_AVS = 13;
    GPS = 14;
    IMU = 15;
    PHY = 16;
    SCP_ERROR = 17;
    TEMPERATURE = 18;
    VTSENS = 19;
  }

  enum DisablementCode {
    UNKNOWN = 0;
    OKAY = 1;
    NO_ACTIVE_ACCOUNT = 2;
    TOO_FAR_FROM_SERVICE_ADDRESS = 3;
    IN_OCEAN = 4;
    BLOCKED_COUNTRY = 6;
    DATA_OVERAGE_SANDBOX_POLICY = 7;
    CELL_IS_DISABLED = 8;
    ROAM_RESTRICTED = 10;
    UNKNOWN_LOCATION = 11;
    ACCOUNT_DISABLED = 12;
    UNSUPPORTED_VERSION = 13;
    MOVING_TOO_FAST_FOR_POLICY = 14;
  }

  string id = 1;
  string hardware_version = 2;
  string software_version = 3;
  int32 utc_offset_s = 4;
  .SpaceX.API.Device.DishGetDiagnosticsResponse.TestResult hardware_self_test = 7;
  repeated .SpaceX.API.Device.DishGetDiagnosticsResponse.TestResultCode hardware_self_test_codes = 11;
  .SpaceX.API.Device.DishGetDiagnosticsResponse.Alerts alerts = 5;
  .SpaceX.API.Device.DishGetDiagnosticsResponse.DisablementCode disablement_code = 6;
  .SpaceX.API.Device.DishGetDiagnosticsResponse.Location location = 8;
  .SpaceX.API.Device.DishGetDiagnosticsResponse.AlignmentStats alignment_stats = 9;
  bool stowed = 10;
}

message TcpConnectivityTestRequest {
  string target = 1;
  uint32 port = 2;
}

message UdpConnectivityTestRequest {
  enum UDPProbeDataType {
    EMPTY = 0;
    DNS_STATUS_REQUEST = 1;
    DTLS_CLIENT_HELLO = 2;
    DNS_VERSION_BIND_REQ = 3;
    RPC_CHECK = 4;
    DNS_SD = 5;
    SNMP_V1_PUBLIC = 6;
    SNMP_V3_GET_REQUEST = 7;
    NTP_MESSAGE = 8;
    XDMCP = 9;
    KERBEROS = 10;
    SIP_OPTIONS = 11;
    LDAP_SEARCH_REQ = 12;
    MEMCACHED_STATS = 13;
    OPENVPN = 14;
    CIFS_NS_UC = 15;
    TFTP_GET = 16;
    DHCP_INFORM = 17;
    QUIC = 18;
    RIPV1 = 19;
    NFS_PROC_NULL = 20;
    COAP_REQUEST = 21;
  }

  string target = 1;
  uint32 port = 2;
  .SpaceX.API.Device.UdpConnectivityTestRequest.UDPProbeDataType probe_data = 3;
}

message GetGoroutineStackTracesRequest {
}

message GetGoroutineStackTracesResponse {
  string stack_traces = 1;
}

enum WifiClientSandboxAlert {
  SANDBOX_ALERT_UNKNOWN = 0;
  SANDBOX_ALERT_PORTAL = 1;
  SANDBOX_ALERT_GROUND_API = 2;
  SANDBOX_ALERT_STARLINK_API = 3;
}

enum PositionSource {
  AUTO = 0;
  NONE = 1;
  UT_INFO = 2;
  EXTERNAL = 3;
  GPS = 4;
  STARLINK = 5;
  GNC_GPS = 6;
  GNC_PNT = 7;
  GNC_FUSED = 8;
  GNC_RAW = 9;
}

enum SpeedtestError {
  SPEEDTEST_ERROR_NONE = 0;
  SPEEDTEST_ERROR_UNKNOWN = 1;
  SPEEDTEST_ERROR_TOKEN = 2;
  SPEEDTEST_ERROR_API = 3;
  SPEEDTEST_ERROR_NO_RESULT = 4;
  SPEEDTEST_ERROR_OFFLINE = 5;
}

